fix: rename master->main

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,7 +9,7 @@ on:
       - "examples/**"
   push:
     branches:
-      - master
+      - main
     paths-ignore:
       - "*.md"
       - "binder/**"
