--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -34,7 +34,7 @@ jobs:
           ls -la
           ./build.sh --lint=true
 
-      - name: Login to DockerHub
+      - name: Login to target registry
         if: github.ref == 'refs/heads/main'
         uses: docker/login-action@v1
         with:
@@ -42,6 +42,6 @@ jobs:
           username: _json_key
           password: ${{ secrets.AKT_ENG_REGISTRY_PUBLIC_JSON }}
 
-      - name: Push images on GoogleContainerRegistry
+      - name: Push images to GoogleContainerRegistry
         if: github.ref == 'refs/heads/main'
-        run: docker images --format "{{.Repository}}:{{.Tag}}" | grep akt-eng-registry-public | xargs -n 1 docker push
+        run: docker images --format "{{.Repository}}:{{.Tag}}" | grep ${{ secrets.AKT_ENG_REGISTRY_DOMAIN }} | xargs -n 1 docker push
