--- a/php/7.3-apache/Dockerfile
+++ b/php/7.3-apache/Dockerfile
@@ -1,3 +1,4 @@
+# hadolint ignore=DL3003,DL3008
 FROM php:7.3-apache
 
 LABEL vendor="Artifakt.io" \
@@ -16,8 +17,8 @@ ARG MEMCACHE_VERSION=4.0.5.2
 ARG APCU_VERSION=5.1.19
 
 # Install dependencies
+# hadolint ignore=DL3003
 RUN apt-get update \
-  && apt-get upgrade -y \
   && apt-get install -y --no-install-recommends \
   apt-utils \
   libbz2-dev \
@@ -53,7 +54,7 @@ RUN docker-php-ext-configure \
   zip --with-libzip
 
 # Install required PHP extensions
-RUN docker-php-ext-install -j$(nproc) \
+RUN "docker-php-ext-install -j$(nproc) \
   bcmath \
   bz2 \
   calendar \
@@ -75,13 +76,16 @@ RUN docker-php-ext-install -j$(nproc) \
   wddx \
   xmlrpc \
   xsl \
-  zip
+  zip"
 
 # a couple of extensions are only available through PECL
-RUN pecl install apcu-$ACPU_VERSION memcache-$MEMCACHE_VERSION
+RUN pecl install apcu-$APCU_VERSION memcache-$MEMCACHE_VERSION
+
+SHELL /bin/bash set -eo pipefail
 
 # install SODIUM php extension
 # see DOCS: https://doc.libsodium.org/
+# hadolint ignore=DL3008
 RUN rm -f /usr/local/etc/php/conf.d/*sodium.ini \
   && rm -f /usr/local/lib/php/extensions/*/*sodium.so \
   && apt-get remove libsodium* -y  \
@@ -91,9 +95,8 @@ RUN rm -f /usr/local/etc/php/conf.d/*sodium.ini \
   && ./configure \
   && make && make check \
   && make install  \
-  && cd / \
-  && rm -rf /tmp/libsodium  \
-  && pecl install -o -f libsodium
+  && pecl install -o -f libsodium \
+  && rm -rf /tmp/libsodium
 
 # finally, make sure all mods and extensions are enabled
 RUN docker-php-ext-enable $PHP_EXTENSION_LIST
