--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,6 +4,8 @@ on:
   schedule:
     - cron: "0 0 * * *"
   pull_request:
+    paths:
+      - '**/Dockerfile'    
     paths-ignore:
       - "*.md"
       - "binder/**"
@@ -12,6 +14,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '**/Dockerfile'
     paths-ignore:
       - "*.md"
       - "binder/**"
@@ -19,22 +23,52 @@ on:
       - "examples/**"
 
 jobs:
-  build:
-    name: Build Docker Images
+
+  provide_images_json:
+    # see json juggling: https://docs.github.com/en/free-pro-team@latest/actions/reference/context-and-expression-syntax-for-github-actions#example-6
+    # see https://stackoverflow.com/a/62953566/1348344
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: get docker json list
+        id: output_data
+        run: |
+          pwd
+          ls -la
+          echo "::set-output name=matrix::$(python -c 'import json, sys; print(json.dumps([v for v in sys.argv[1:]]))' $(git diff-tree --no-commit-id --name-only -r HEAD HEAD^ | grep Dockerfile))"
+    # this step is needed, so the output gets to the next defined job
+    outputs:
+        matrix: ${{ steps.output_data.outputs.matrix }}
+
+
+  build_and_push:
+    needs: provide_images_json
+    
+    runs-on: ubuntu-latest
+    strategy:
+        fail-fast: true
+        matrix:
+            dockerfile: ${{fromJson(needs.provide_images_json.outputs.matrix)}}
+        
     if: >
       !contains(github.event.head_commit.message, 'ci skip') &&
       !contains(github.event.pull_request.title, 'ci skip')
     steps:
       - name: Clone Main Repo
         uses: actions/checkout@v2
-        # with:
-        #   path: main
+        with:
+          fetch-depth: 0
       - name: Build Docker Images
         run: |
-          env
-          ls -la
-          export REGISTRY_TARGET=${{ secrets.AKT_ENG_REGISTRY_DOMAIN }} && ./build.sh --lint=true
+          fullDockerfilePath=${{ matrix.dockerfile }}
+          folder=${fullDockerfilePath%"/Dockerfile"}
+          TMP_IMAGE_ARRAY=($(echo $folder | tr "/" "\n"))
+          IMAGE_NAME=${TMP_IMAGE_ARRAY[0]}
+          TAG=${TMP_IMAGE_ARRAY[1]}
+          export REGISTRY_TARGET=${{ secrets.AKT_ENG_REGISTRY_DOMAIN }} && ./build.sh --lint=true --image=$IMAGE_NAME --tag=$TAG
 
       - name: Login to target registry
         if: github.ref == 'refs/heads/main'
