debug w/ base and head ref

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           pwd
           ls -la
+          git diff-tree --no-commit-id --name-only --diff-filter=ACMRT -r ${{ github.head_ref }} ${{ github.base_ref }}
           echo "::set-output name=matrix::$(python -c 'import json, sys; print(json.dumps([v for v in sys.argv[1:]]))' $(git diff-tree --no-commit-id --name-only --diff-filter=ACMRT -r ${{ github.event.after }} ${{ github.base.sha }}  | grep Dockerfile))"
     # this step is needed, so the output gets to the next defined job
     outputs:
