--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,13 +3,13 @@ name: Build Docker Images
 on:
   pull_request:
     paths:
-      - '**/Dockerfile'    
+      - '**/Dockerfile'
   push:
     branches:
       - main
     paths:
       - '**/Dockerfile'
-  
+
 jobs:
 
   provide_images_json:
@@ -21,12 +21,13 @@ jobs:
         with:
           fetch-depth: 0
 
+      # comparing HEAD^ to HEAD works because previous action merges master into the PR branch
       - name: get docker json list
         id: output_data
         run: |
-          pwd
-          ls -la
-          echo "::set-output name=matrix::$(python -c 'import json, sys; print(json.dumps([v for v in sys.argv[1:]]))' $(git diff-tree --no-commit-id --name-only -r HEAD HEAD^ | grep Dockerfile))"
+          echo FOUND UPDATED DOCKERFILES TO BUILD
+          git diff-tree --no-commit-id --name-only --diff-filter=ACMRT -r HEAD^ HEAD | grep Dockerfile
+          echo "::set-output name=matrix::$(python -c 'import json, sys; print(json.dumps([v for v in sys.argv[1:]]))' $(git diff-tree --no-commit-id --name-only --diff-filter=ACMRT -r HEAD^ HEAD | grep Dockerfile))"
     # this step is needed, so the output gets to the next defined job
     outputs:
         matrix: ${{ steps.output_data.outputs.matrix }}
@@ -34,13 +35,13 @@ jobs:
 
   build_and_push:
     needs: provide_images_json
-    
+
     runs-on: ubuntu-latest
     strategy:
         fail-fast: true
         matrix:
             dockerfile: ${{fromJson(needs.provide_images_json.outputs.matrix)}}
-        
+
     if: >
       !contains(github.event.head_commit.message, 'ci skip') &&
       !contains(github.event.pull_request.title, 'ci skip')
