--- a/symfony/5.2-apache/Dockerfile
+++ b/symfony/5.2-apache/Dockerfile
@@ -1,7 +1,7 @@
 FROM registry.artifakt.io/php:7.4-apache
 
 # hadolint ignore=DL3022
-COPY --from=composer /usr/bin/composer /usr/bin/composer
+COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
 RUN composer create-project symfony/website-skeleton:"^5.2" .
 
@@ -10,3 +10,14 @@ RUN composer require symfony/apache-pack
 COPY 000-default.conf /etc/apache2/sites-enabled/000-default.conf
 
 RUN chown -R www-data:www-data .
+
+HEALTHCHECK CMD curl --fail http://localhost/index.php || exit 1
+
+ONBUILD COPY --chown=www-data:www-data . /var/www/html/
+# hadolint ignore=DL3022
+ONBUILD ENV APP_DEBUG=0
+ONBUILD ENV APP_ENV=prod
+ONBUILD RUN env && composer install --no-cache --optimize-autoloader --no-interaction --no-ansi --no-dev
+ONBUILD RUN php bin/console cache:clear --no-warmup
+ONBUILD RUN php bin/console cache:warmup
+ONBUILD RUN rm -rf .git assets /root/.composer /tmp/* && chown -R www-data:www-data /var/www/html/vendor
