--- a/symfony/5.2-apache/000-default.conf
+++ b/symfony/5.2-apache/000-default.conf
@@ -9,6 +9,9 @@
         Allow from All
     </Directory>
 
+    SetEnv APP_ENV dev
+    SetEnv APP_DEBUG 1
+
     # uncomment the following lines if you install assets as symlinks
     # or run into problems when compiling LESS/Sass/CoffeeScript assets
     # <Directory /var/www/project>
