--- a/symfony/5.2-fpm/Dockerfile
+++ b/symfony/5.2-fpm/Dockerfile
@@ -11,7 +11,9 @@ ONBUILD COPY --chown=www-data:www-data . /var/www/html/
 # hadolint ignore=DL3022
 ONBUILD ENV APP_DEBUG=0
 ONBUILD ENV APP_ENV=prod
-ONBUILD RUN env && composer install --no-cache --optimize-autoloader --no-interaction --no-ansi --no-dev
+ONBUILD COPY Dockerfile composer.json* ./
+ONBUILD RUN  if [ -f composer.json ]; then composer install --no-cache --optimize-autoloader --no-interaction --no-ansi --no-dev; fi
+ONBUILD COPY . .
 ONBUILD RUN php bin/console cache:clear --no-warmup
 ONBUILD RUN php bin/console cache:warmup
 ONBUILD RUN rm -rf .git assets /root/.composer /tmp/* && chown -R www-data:www-data /var/www/html/vendor
