--- a/python/3.9/Dockerfile
+++ b/python/3.9/Dockerfile
@@ -8,10 +8,12 @@ ONBUILD ARG AF_ARG_EXPOSE=80
 ONBUILD ARG AF_ARG_CMD=sleep
 ONBUILD ENV AF_ENV_CMD=${AF_ARG_CMD}
 
-ONBUILD WORKDIR /usr/src/app
-ONBUILD COPY Dockerfile requirements.txt* ./
+ONBUILD COPY Dockerfile requirements.txt* /usr/src/app/
 ONBUILD RUN  if [ -f requirements.txt ]; then pip install --no-cache-dir -r requirements.txt; fi
-ONBUILD COPY . .
+ONBUILD COPY . /usr/src/app
 
 ONBUILD EXPOSE $AF_ARG_EXPOSE
+
+# hadolint ignore=DL3025
 ONBUILD CMD $AF_ENV_CMD
+
