add a specific tag for onbuild

--- a/symfony/5.2-apache/Dockerfile
+++ b/symfony/5.2-apache/Dockerfile
@@ -1,7 +1,7 @@
 FROM registry.artifakt.io/php:7.4-apache
 
 # hadolint ignore=DL3022
-COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
+COPY --from=composer /usr/bin/composer /usr/bin/composer
 
 RUN composer create-project symfony/website-skeleton:"^5.2" .
 
@@ -10,32 +10,3 @@ RUN composer require symfony/apache-pack
 COPY 000-default.conf /etc/apache2/sites-enabled/000-default.conf
 
 RUN chown -R www-data:www-data .
-
-HEALTHCHECK CMD curl --fail http://localhost/index.php || exit 1
-
-# hadolint ignore=DL3045
-COPY docker-entrypoint.sh /usr/local/bin/
-
-VOLUME var/cache
-VOLUME var/logs
-VOLUME var/uploads
-
-ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
-CMD ["apache2-foreground"]
-
-ONBUILD COPY --chown=www-data:www-data . /var/www/html/
-# hadolint ignore=DL3022
-ONBUILD ENV APP_DEBUG=0
-ONBUILD ENV APP_ENV=prod
-ONBUILD RUN env && composer install --no-cache --optimize-autoloader --no-interaction --no-ansi --no-dev
-
-# copy the artifakt folder on root
-ONBUILD RUN  if [ -d .artifakt ]; then cp -rp /var/www/html/.artifakt /.artifakt/; elif [ -d artifakt ]; then cp -rp /var/www/html/artifakt /.artifakt; fi
-
-# run custom scripts build.sh or install.sh
-ONBUILD RUN  if [ -f /.artifakt/build.sh ]; then /.artifakt/build.sh; fi
-ONBUILD RUN  if [ -f /.artifakt/install.sh ]; then /.artifakt/install.sh; fi
-
-ONBUILD RUN php bin/console cache:clear --no-warmup
-ONBUILD RUN php bin/console cache:warmup
-ONBUILD RUN rm -rf .git assets /root/.composer /tmp/* && chown -R www-data:www-data /var/www/html/vendor
