--- a/symfony/5.2-apache-onbuild/Dockerfile
+++ b/symfony/5.2-apache-onbuild/Dockerfile
@@ -24,13 +24,13 @@ ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 CMD ["apache2-foreground"]
 
 ### FOLLOWING INSTRUCTIONS ARE FOR CHILD IMAGES ONLY
-ONBUILD COPY --chown=www-data:www-data composer.*  package.json /var/www/html/
+#ONBUILD COPY --chown=www-data:www-data composer.*  package.json /var/www/html/
 
 # hadolint ignore=DL3022
+ONBUILD COPY --chown=www-data:www-data . /var/www/html/
 ONBUILD ENV APP_DEBUG=0
 ONBUILD ENV APP_ENV=prod
 ONBUILD RUN env && composer install --no-cache --optimize-autoloader --no-interaction --no-ansi --no-dev
-ONBUILD COPY --chown=www-data:www-data . /var/www/html/
 
 # copy the artifakt folder on root
 ONBUILD RUN  if [ -d .artifakt ]; then cp -rp /var/www/html/.artifakt /.artifakt/; elif [ -d artifakt ]; then cp -rp /var/www/html/artifakt /.artifakt; fi
