--- a/php/7.4-apache/Dockerfile
+++ b/php/7.4-apache/Dockerfile
@@ -104,6 +104,7 @@ RUN rm -f /usr/local/etc/php/conf.d/*sodium.ini \
   && rm -rf /tmp/libsodium
 
 ARG COMPOSER_VERSION=2.0.13
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN curl -sS https://getcomposer.org/installer | \
   php -- --version=${COMPOSER_VERSION} --install-dir=/usr/local/bin --filename=composer
 
