fix broken build

--- a/symfony/5.2-fpm/Dockerfile
+++ b/symfony/5.2-fpm/Dockerfile
@@ -1,5 +1,8 @@
 FROM registry.artifakt.io/php:7.4-fpm
 
+LABEL vendor="Artifakt" \
+      author="djalal@artifakt.io"
+
 # hadolint ignore=DL3022
 COPY --from=composer /usr/bin/composer /usr/bin/composer
 
