--- a/symfony/5.2-apache-onbuild/Dockerfile
+++ b/symfony/5.2-apache-onbuild/Dockerfile
@@ -1,5 +1,8 @@
 FROM registry.artifakt.io/php:7.4-apache
 
+LABEL vendor="Artifakt" \
+      author="djalal@artifakt.io"
+
 # hadolint ignore=DL3022
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
