--- a/symfony/5.2-fpm/Dockerfile
+++ b/symfony/5.2-fpm/Dockerfile
@@ -6,9 +6,11 @@ LABEL vendor="Artifakt" \
 # hadolint ignore=DL3022
 COPY --from=composer /usr/bin/composer /usr/bin/composer
 
+USER www-data
 RUN composer create-project symfony/website-skeleton:"^5.2" .
 
-RUN chown -R www-data:www-data .
+# hadolint ignore=DL3002
+USER root
 
 ONBUILD COPY --chown=www-data:www-data . /var/www/html/
 # hadolint ignore=DL3022
