comply to DL3060

--- a/akeneo/3.2-apache/Dockerfile
+++ b/akeneo/3.2-apache/Dockerfile
@@ -122,7 +122,8 @@ RUN composer update --no-cache --no-dev --optimize-autoloader --prefer-dist --no
     yarn install --cache-folder=/tmp && \
     php bin/console pim:installer:assets --symlink --clean --env=prod && \
     php bin/console cache:clear --no-warmup --env=prod && \
-    yarn run webpack
+    yarn run webpack && \
+    yarn cache clean
 
 COPY parameters.yml ./app/config/parameters.yml
 
