--- a/akeneo/5-apache/.env.local
+++ b/akeneo/5-apache/.env.local
@@ -4,4 +4,6 @@ ARTIFAKT_MYSQL_DATABASE_NAME=akeneo5_pim
 ARTIFAKT_MYSQL_USER=akeneo5_pim
 ARTIFAKT_MYSQL_PASSWORD=akeneo5_pim
 
-APP_DATABASE_NAME=${ARTIFAKT_MYSQL_DATABASE_NAME}
+APP_DATABASE_NAME=akeneo5_pim
+APP_DATABASE_USER=akeneo5_pim
+APP_DATABASE_PASSWORD=akeneo5_pim
