--- a/akeneo/5-apache/akeneo.conf
+++ b/akeneo/5-apache/akeneo.conf
@@ -9,7 +9,6 @@
         Options -MultiViews
         RewriteEngine On
         RewriteCond %{REQUEST_FILENAME} !-f
-        SetEnv APP_ENV ${APP_ENV}
         RewriteRule ^(.*)$ index.php [QSA,L]
     </Directory>
 
@@ -21,7 +20,7 @@
         RewriteEngine Off
     </Directory>
 
-    ErrorLog /var/log/akeneo_error.log
+    ErrorLog /var/www/html/pim-community-standard/var/logs/error.log
     LogLevel warn
-    CustomLog /var/log/akeneo_access.log combined
+    CustomLog /var/www/html/pim-community-standard/var/logs/access.log combined
 </VirtualHost>
