add mandatory SetEnv, fixes symfony errors

--- a/akeneo/4-apache/akeneo.conf
+++ b/akeneo/4-apache/akeneo.conf
@@ -2,6 +2,8 @@
     ServerName akeneo.dev
 
     DocumentRoot /var/www/html/pim-community-standard/public
+    SetEnv APP_ENV ${APP_ENV}
+    SetEnv APP_DEBUG ${APP_DEBUG}
     <Directory /var/www/html/pim-community-standard/public>
         AllowOverride None
         Require all granted
