--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -3,6 +3,14 @@ name: Build Docker Images
 on:
   schedule:
     - cron: "0 0 * * *"
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'reason'     
+        required: true
+        default: ''
+      tags:
+        description: 'forced manual rebuild' 
 
 jobs:
 
